footer alignment fixed

--- a/style.css
+++ b/style.css
@@ -207,4 +207,10 @@ td img {
 footer{
     text-align: left;
 }
+
+@media screen and (max-width:1024px) {
+    footer{
+        text-align: center;
+    }
+}
 /* Footer */
